--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,15 @@
 {
   "name": "y",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple Express & MongoDB backend",
   "license": "ISC",
   "author": "Rohit",
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
+    "prod": "node app.js"
   },
   "dependencies": {
     "axios": "^1.12.2",
@@ -16,5 +18,8 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
